fix(header): remove css styles from logo to align vertically

--- a/frontend/src/app/component/header/header.css
+++ b/frontend/src/app/component/header/header.css
@@ -8,19 +8,6 @@
     margin: 20px auto;
 }
 
-.header-logo {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    font-family: var(--logo-font);
-    font-size: 3rem;
-}
-
-.header-logo a {
-    text-decoration: none;
-    color: var(--primary-color);
-}
-
 .header-logo img {
     height: 8vh;
     width: auto;
